--- a/httplibrary/build.gradle
+++ b/httplibrary/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -16,6 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
@@ -28,4 +29,5 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.6'
 }
 
-apply from: './nexus_maven.gradle'
+apply from: './binary.gradle'
+//apply from: './nexus_maven.gradle'
